--- a/ProductViewCSS.css
+++ b/ProductViewCSS.css
@@ -1,12 +1,7 @@
 
 @import "HeaderViewCSS.css";
 @import "FooterViewCSS.css";
-
-div #productQuantity{
-    width: 103px;
-    text-align: center;
-    font-size: 18px;
-}
+@import "AddRetrieveButtonsCSS.css";
 
 .productImage img {
     width: 480px;
