--- a/MyAccountCSS.css
+++ b/MyAccountCSS.css
@@ -2,3 +2,10 @@
 @import "HeaderViewCSS.css";
 @import "FooterViewCSS.css";
 
+div.list-group-item {
+    height: 55px;
+}
+
+.list-group-item div:first-child {
+    width: 120px;
+}
