--- a/IncrementDecrementButtonsCSS.css
+++ b/IncrementDecrementButtonsCSS.css
@@ -1,14 +1,14 @@
 
-.addRemoveButtons{
+.addRemoveButtons {
     width: 150px;
 }
 
-div #productQuantity{
+div.productQuantityText {
      width: 103px;
      text-align: center;
      font-size: 18px;
  }
 
-.minusButton:hover, .plusButton:hover {
+.decrementQuantity:hover, .incrementQuantity:hover {
     background: #000;
 }
