--- a/LoginViewCSS.css
+++ b/LoginViewCSS.css
@@ -2,6 +2,17 @@
 @import "HeaderViewCSS.css";
 @import "FooterViewCSS.css";
 
-div.container {
-    margin: 800px auto 400px !important;
+@media only screen and (min-width: 1367px) {
+
+    div.container {
+        margin: 80px auto 300px;
+    }
 }
+
+@media only screen and (max-width: 1366px) {
+
+    div.container {
+        margin: 40px auto;
+    }
+}
+
