--- a/OrderViewCSS.css
+++ b/OrderViewCSS.css
@@ -2,6 +2,17 @@
 @import "HeaderViewCSS.css";
 @import "FooterViewCSS.css";
 
-div.container {
-    margin: 50px auto 200px;
+
+@media only screen and (min-width: 1367px) {
+
+    div.container {
+        margin: 80px auto 400px;
+    }
+}
+
+@media only screen and (max-width: 1366px) {
+
+    div.container {
+        margin: 82px auto;
+    }
 }
