--- a/ProductViewCSS.css
+++ b/ProductViewCSS.css
@@ -7,6 +7,17 @@
     width: 480px;
 }
 
-div.container {
-    margin: 50px auto 200px;
+
+@media only screen and (min-width: 1367px) {
+
+    div.container {
+        margin: 80px auto 240px;
+    }
+}
+
+@media only screen and (max-width: 1366px) {
+
+    div.container {
+        margin: 10px auto 50px;
+    }
 }
